@@ -36,12 +36,15 @@ import net.minecraft.world.entity.projectile.Arrow;
 import net.minecraft.world.item.*;
 import net.minecraft.world.item.enchantment.Enchantments;
 import net.minecraft.world.level.Level;
+import net.minecraft.world.level.ServerLevelAccessor;
 import org.jetbrains.annotations.NotNull;
 import org.spongepowered.asm.mixin.Mixin;
 import org.spongepowered.asm.mixin.injection.At;
 import org.spongepowered.asm.mixin.injection.Inject;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfo;
 import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
+
+import javax.annotation.Nullable;
 
 /**
  *
@@ -54,17 +57,17 @@ import org.spongepowered.asm.mixin.injection.callback.CallbackInfoReturnable;
 public abstract class WitherSkeletonMixin extends AbstractSkeleton {
 	
 	//region Mixin
-	private WitherSkeletonMixin(EntityType<? extends AbstractSkeleton> entityType, Level level) {
+	private WitherSkeletonMixin(@NotNull EntityType<? extends AbstractSkeleton> entityType, @NotNull Level level) {
 		super(entityType, level);
 	}
 	//endregion
 	
 	@Inject(method = "populateDefaultEquipmentSlots", at = @At("HEAD"), cancellable = true)
-	protected void populateDefaultEquipmentSlots(@NotNull RandomSource rng, DifficultyInstance instance, CallbackInfo callback) {
+	protected void populateDefaultEquipmentSlots(@NotNull RandomSource rng, @NotNull DifficultyInstance instance, @NotNull CallbackInfo callback) {
 		if (0.25 > rng.nextDouble()) {
 			this.setItemSlot(EquipmentSlot.MAINHAND, new ItemStack(Items.BOW));
 		} else {
-			Item weapon = ItemEquipmentHelper.getWeaponWeightsForDifficulty(Math.max(2.75, instance.getEffectiveDifficulty())).next().get(0);
+			Item weapon = ItemEquipmentHelper.getWeaponWeightsForDifficulty(Math.max(2.75, instance.getEffectiveDifficulty())).next().getFirst();
 			if (weapon instanceof SwordItem) {
 				this.setItemSlot(EquipmentSlot.MAINHAND, new ItemStack(weapon));
 			} else {
@@ -76,15 +79,15 @@ public abstract class WitherSkeletonMixin extends AbstractSkeleton {
 	}
 	
 	@Inject(method = "populateDefaultEquipmentEnchantments", at = @At("HEAD"))
-	protected void populateDefaultEquipmentEnchantments(RandomSource rng, @NotNull DifficultyInstance instance, CallbackInfo callback) {
+	protected void populateDefaultEquipmentEnchantments(@NotNull ServerLevelAccessor level, @NotNull RandomSource rng, @NotNull DifficultyInstance instance, @NotNull CallbackInfo callback) {
 		ItemStack stack = ItemStackHelper.setupItemForSlot(this, EquipmentSlot.MAINHAND, this.getItemInHand(InteractionHand.MAIN_HAND), instance.getSpecialMultiplier());
-		XSEnchantmentHelper.removeEnchantment(Enchantments.FLAMING_ARROWS, stack);
+		XSEnchantmentHelper.removeEnchantment(Enchantments.FLAME.getOrThrow(this), stack);
 		this.setItemSlot(EquipmentSlot.MAINHAND, stack);
 	}
 	
 	@Inject(method = "getArrow", at = @At("HEAD"), cancellable = true)
-	protected void getArrow(ItemStack stack, float usePercentage, CallbackInfoReturnable<AbstractArrow> callback) {
-		AbstractArrow abstractArrow = super.getArrow(stack, usePercentage);
+	protected void getArrow(@NotNull ItemStack stack, float usePercentage, @Nullable ItemStack weapon, @NotNull CallbackInfoReturnable<AbstractArrow> callback) {
+		AbstractArrow abstractArrow = super.getArrow(stack, usePercentage, weapon);
 		if (abstractArrow instanceof Arrow arrow) {
 			arrow.addEffect(new MobEffectInstance(MobEffects.WITHER, 200));
 		}
